--- a/apps/professor/src/styles/professor-overview.css
+++ b/apps/professor/src/styles/professor-overview.css
@@ -28,9 +28,15 @@
 }
 
 .prof-overview-icon {
-  font-size: 32px;
-  line-height: 1;
   flex-shrink: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--admin-text-muted);
+}
+
+.prof-overview-icon svg {
+  opacity: 0.7;
 }
 
 .prof-overview-content {
